Fri Jun 18 19:06:00 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ciao/Base:
        * ciao/ComponentServer:

          Renamed ComponentServer to Base.

        * ciao/Deployment/Handlers/Component_Handler.cpp:
        * ciao/Deployment/Handlers/Container_Handler.cpp:
        * ciao/Deployment/Handlers/Home_Handler.cpp:
        * ciao/Deployment/Handlers/Homed_Component_Handler.cpp:

          Fallout from above change.

Fri Jun 18 18:38:59 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/PSAT/ccm_dds_psat.idl:
          Added new pragma to generate implementation header

        * connectors/dds4ccm/impl/dds/DDS4CCM_Traits.h:
          Removed this file, not needed anymore

Fri Jun 18 18:32:21 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * connectors/dds4ccm/idl/ccm_dds.idl:

          Added 2 pragma directives, both of a new type added to
          the IDL compiler, directing it to generate an include
          for the DDS connector impl template class. These added
          directives are for the DDS_State and DDS_Event connectors.

Fri Jun 18 18:18:54 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/LocalityManager/Daemon/Locality_Manager.mpc:
        * DAnCE/LocalityManager/Handler/LocalityHandler.mpc:
        * DAnCE/LocalityManager/Scheduler/Scheduler.mpc:
        * DAnCE/NodeApplication/NodeApplication_Impl.h:
        * DAnCE/NodeManager/Node_Manager_Module.cpp:
        * MPC/config/ciao_deployment_handlers.mpb:
        * ciao/Containers/Session/Session_Container.cpp:
        * ciao/Containers/Session/Session_Container.mpc:
        * ciao/Deployment/Handlers/CIAO_Deployment_Handlers.mpc:

          Fallout from removal of CIAO component server.

        * ciao/ComponentServer/CIAO_Base.mpc:
        * ciao/ComponentServer/Client_init.h:
        * ciao/ComponentServer/Server_init.h:

          Restructured into the CIAO_Base library.  Directory will be