@@ -1,3 +1,9 @@
+Fri Jun 18 19:40:33 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * tools/XML/XercesString.cpp:
+
+          Attempt at a fix for a memory leak detected by valgrind.
+
 Fri Jun 18 19:06:00 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * ciao/Base:
